--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "lodash": "^4.17.21"
   }
 }
