--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",  
+    "deploy": "gh-pages -d dist"
+
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
