--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack",  
-    "deploy": "gh-pages -d dist"
-
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -42,7 +40,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
