--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
